# geekorm

./: .all-contributorsrc  .gitignore  .release.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/scripts/: bump-version.sh  crates-check.sh  crates-version.sh
.github/workflows/: build.yml  dep-review.yml  labeler.yml  markdown.yml  release-train.yml  release.yml  semgrep.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: chrono.rs  filter.rs  foreignkeys.rs  pagination.rs  parsing_enums.rs  semver.rs  tfa.rs  transactions.rs
examples/foreignkeys/: Cargo.toml
examples/foreignkeys/src/: main.rs
examples/one-to-many/: Cargo.toml
examples/one-to-many/src/: main.rs
examples/rusqlite/: Cargo.toml
examples/rusqlite/src/: main.rs
examples/server-rocket/: Cargo.toml
examples/server-rocket/src/: main.rs
examples/sqlite-wal/: Cargo.toml
examples/sqlite-wal/src/: main.rs
examples/turso-libsql/: Cargo.toml
examples/turso-libsql/src/: main.rs  models.rs
examples/users/: Cargo.toml
examples/users/src/: main.rs
geekorm/: Cargo.toml
geekorm-cli/: Cargo.toml  README.md
geekorm-cli/src/: cli.rs  display.rs  init.rs  main.rs  migrations.rs
geekorm-cli/src/cli/: mod.rs
geekorm-cli/src/codegen/: libgen.rs  migration_mod.rs  mod.rs  sqlgen.rs
geekorm-cli/src/utils/: cargo.rs  config.rs  database.rs  interactive.rs  mod.rs  tokens.rs
geekorm-cli/src/workflows/: mod.rs
geekorm-core/: Cargo.toml  README.md
geekorm-core/src/: error.rs  lib.rs  queries.rs
geekorm-core/src/backends/: drivers.rs  libsql.rs  mod.rs  postgres.rs  rusqlite.rs  transactions.rs
geekorm-core/src/backends/connect/: backend.rs  manager.rs  mod.rs
geekorm-core/src/backends/libsql/: mutex.rs
geekorm-core/src/backends/postgres/: de.rs
geekorm-core/src/builder/: alter.rs  columns.rs  columntypes.rs  database.rs  joins.rs  keys.rs  mod.rs  models.rs  table.rs  values.rs
geekorm-core/src/builder/keys/: foreign.rs  primary.rs
geekorm-core/src/builder/values/: mod.rs  totp_value.rs  valchrono.rs  valsemver.rs  valuuid.rs
geekorm-core/src/migrations/: mod.rs  snap.rs  validate.rs
geekorm-core/src/queries/: builder.rs  mod.rs  pages.rs  pagination.rs  query.rs
geekorm-core/src/utils/: crypto.rs  mod.rs  tables.rs  tfa.rs
geekorm-core/src/utils/crypto/: hashing.rs  mod.rs  rand.rs
geekorm-core/src/utils/crypto/hashing/: mod.rs  orm_argon2.rs  orm_pbkdf2.rs  orm_sha512.rs
geekorm-derive/: Cargo.toml  README.md  build.rs
geekorm-derive/src/: attr.rs  derive.rs  errors.rs  internal.rs  lib.rs  macros.rs  parser.rs  parsers.rs
geekorm-derive/src/derive/: column.rs  columntypes.rs  multitable.rs  table.rs
geekorm-derive/src/parsers/: backends.rs  helpers.rs  mod.rs  taberbuilder.rs  tablebuilder.rs  values.rs
geekorm-sql/: Cargo.toml
geekorm-sql/src/: backends.rs  error.rs  lib.rs  queries.rs
geekorm-sql/src/builder/: columns.rs  columntypes.rs  conditions.rs  joins.rs  mod.rs  ordering.rs  pagination.rs  table.rs  tests.rs  transaction.rs
geekorm-sql/src/builder/queries/: alter.rs  count.rs  create.rs  delete.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs
geekorm-sql/src/parser/: mod.rs
geekorm-sql/src/query/: batch.rs  builder.rs  columns.rs  columntypes.rs  conditions.rs  joins.rs  mod.rs  ordering.rs  qtype.rs  table.rs
geekorm-sql/src/sql/: mod.rs
geekorm-sql/src/sql/postgres/: mod.rs
geekorm-sql/src/sql/sqlite/: count.rs  create.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
geekorm-sql/src/values/: chrono.rs  datetime.rs  mod.rs  semver.rs  time.rs  url.rs  uuid.rs  value.rs  values.rs
geekorm/src/: lib.rs  queries.rs
geekorm/src/builder/: columns.rs  columntypes.rs  mod.rs  models.rs  table.rs  values.rs
geekorm_derive/: Cargo.toml
geekorm_derive/src/: derive.rs  parser.rs
src/: README.md  lib.rs
