[workspace]
resolver = "2"
members = [".", "geekorm-core", "geekorm-derive", "geekorm-cli"]

[workspace.package]
version = "0.4.3"
license = "MIT"
edition = "2021"
rust-version = "1.74"
keywords = ["database", "orm", "sql", "sqlite"]
categories = ["database"]

documentation = "https://docs.rs/geekorm"
repository = "https://github.com/42ByteLabs/geekorm"

authors = ["GeekMasher"]


[package]
name = "geekorm"
readme = "README.md"
description = "A simple and easy to use ORM for SQLite databases"

version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []
# All features (minus backends)
all = ["uuid", "chrono", "new", "helpers", "rand", "hash"]

uuid = ["geekorm-core/uuid"]
chrono = ["geekorm-derive/chrono", "geekorm-core/chrono"]
# Random Generators
rand = ["geekorm-derive/rand", "geekorm-core/rand"]

# Hashing Algorithms for Passwords
hash = ["geekorm-derive/hash", "geekorm-core/hash", "hash-pbkdf2"]
hash-all = ["hash-pbkdf2", "hash-argon2", "hash-sha512"]
hash-pbkdf2 = ["hash", "geekorm-derive/hash-pbkdf2", "geekorm-core/hash-pbkdf2"]
hash-argon2 = ["hash", "geekorm-derive/hash-argon2", "geekorm-core/hash-argon2"]
hash-sha512 = ["hash", "geekorm-derive/hash-sha512", "geekorm-core/hash-sha512"]

# Generate new functions for Tables
new = ["geekorm-derive/new"]
# Generate helper functions for Tables
helpers = ["geekorm-derive/helpers"]
# Generate primary key functions for Tables automatically
primary_key = ["geekorm-derive/primary_key"]

# Backends for the ORM
libsql = ["geekorm-derive/libsql", "geekorm-core/libsql"]

[dependencies]
geekorm-core = { version = "^0.4.3", path = "geekorm-core" }
geekorm-derive = { version = "^0.4.3", path = "geekorm-derive" }

[dev-dependencies]
anyhow = "^1.0"
env_logger = "^0.11"
libsql = "0.4"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.38", features = ["full"] }
chrono = { version = "^0.4", features = ["serde"] }

[profile.test]
opt-level = 1

[[example]]
name = "geekorm-example-users"
path = "./examples/users/src/main.rs"
required-features = ["all"]

[[example]]
name = "geekorm-example-foreignkeys"
path = "./examples/foreignkeys/src/main.rs"
required-features = ["all"]

[[example]]
name = "geekorm-example-turso-libsql"
path = "./examples/turso-libsql/src/main.rs"
required-features = ["all", "libsql"]

