[workspace]
resolver = "2"
members = [
    ".",
    "geekorm-core",
    # "geekorm-sql",
    "geekorm-derive",
    "geekorm-cli",
]

[workspace.package]
version = "0.11.5"
license = "MIT"

edition = "2024"
rust-version = "1.85"

keywords = ["database", "orm", "sql", "sqlite"]
categories = ["database"]

documentation = "https://docs.rs/geekorm"
repository = "https://github.com/42ByteLabs/geekorm"

authors = ["GeekMasher"]


[package]
name = "geekorm"
readme = "README.md"
description = "A simple and easy to use ORM for SQLite databases"

version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["all", "backends"]
# All features (minus backends)
all = ["uuid", "chrono", "new", "pagination", "helpers", "rand", "hash"]

utils = ["geekorm-core/utils"]

uuid = ["geekorm-core/uuid"]
chrono = ["geekorm-derive/chrono", "geekorm-core/chrono"]
semver = ["geekorm-derive/semver", "geekorm-core/semver"]
pagination = ["geekorm-core/pagination"]
# Two Factor Authentication
tfa = ["two-factor-auth", "two-factor-auth-qr"]
two-factor-auth = ["geekorm-core/two-factor-auth"]
two-factor-auth-qr = ["two-factor-auth", "geekorm-core/two-factor-auth-qr"]
# Random Generators
rand = ["geekorm-derive/rand", "geekorm-core/rand"]
# Logging
log = ["geekorm-core/log"]
# Hashing Algorithms for Passwords
hash = ["geekorm-derive/hash", "geekorm-core/hash", "hash-pbkdf2"]
hash-all = ["hash-pbkdf2", "hash-argon2", "hash-sha512"]
hash-pbkdf2 = ["hash", "geekorm-derive/hash-pbkdf2", "geekorm-core/hash-pbkdf2"]
hash-argon2 = ["hash", "geekorm-derive/hash-argon2", "geekorm-core/hash-argon2"]
hash-sha512 = ["hash", "geekorm-derive/hash-sha512", "geekorm-core/hash-sha512"]

# Generate new functions for Tables
new = ["geekorm-derive/new"]
# Generate helper functions for Tables
helpers = ["geekorm-derive/helpers"]

# Backends for the ORM
backends = ["search", "connect", "geekorm-core/backends", "geekorm-derive/backends"]
backends-tokio = ["geekorm-core/backends-tokio"]
connect = ["geekorm-core/connect"]
search = ["geekorm-derive/search", "geekorm-core/search"]

libsql = ["backends", "geekorm-derive/libsql", "geekorm-core/libsql"]
rusqlite = ["backends", "geekorm-derive/rusqlite", "geekorm-core/rusqlite"]
# sqlite = ["backends", "geekorm-derive/sqlite", "geekorm-core/sqlite"]

migrations = ["geekorm-core/migrations", "dep:lazy_static"]

[dependencies]
geekorm-core = { version = "^0.11.5", path = "geekorm-core" }
geekorm-derive = { version = "^0.11.5", path = "geekorm-derive" }

lazy_static = { version = "^1", optional = true }

[dev-dependencies]
geekorm = { path = ".", features = ["all", "semver", "tfa"] }

anyhow = "^1"
env_logger = "^0.11"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.49", features = ["full"] }
chrono = { version = "^0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
totp-rs = { version = "^5.5", features = ["serde_support", "gen_secret"] }

libsql = "^0.9"
rusqlite = "^0.38"

rocket = { version = "^0.5" }

[profile.test]
opt-level = 1

[[example]]
name = "tfa"
path = "./examples/tfa.rs"
required-features = ["all", "tfa", "libsql"]

[[example]]
name = "chrono"
path = "./examples/chrono.rs"
required-features = ["all", "libsql"]

[[example]]
name = "pagination"
path = "./examples/pagination.rs"
required-features = ["all", "libsql", "pagination"]

[[example]]
name = "filter"
path = "./examples/filter.rs"
required-features = ["all", "libsql"]

[[example]]
name = "turso-libsql"
path = "./examples/turso-libsql/src/main.rs"
required-features = ["libsql"]

[[example]]
name = "rusqlite"
path = "./examples/rusqlite/src/main.rs"
required-features = ["all", "rusqlite"]

[[example]]
name = "rocket"
path = "./examples/server-rocket/src/main.rs"
required-features = ["all", "libsql", "backends-tokio"]
