[package]
name = "geekorm-cli"
description = "GeekORM Commmand Line Interface"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[dependencies]
geekorm = { path = "../", version = "^0.8.3", features = ["utils"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }
indicatif = "0.17"
dotenvy = { version = "0.15", features = ["cli"] }

tokio = { version = "1.0", features = ["full"] }

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
glob = "0.3.1"
chrono = { version = "0.4.38", features = ["serde"] }

