[package]
name = "geekorm-cli"
description = "GeekORM Commmand Line Interface"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[features]


[dependencies]
geekorm = { path = "../", version = "^0.11.3", features = ["utils", "migrations"] }
geekorm-core = { path = "../geekorm-core", version = "^0.11.3", features = ["migrations", "rusqlite"] }

# libsql = { version = "0.6", optional = true }
rusqlite = { version = "0.34" }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }
indicatif = "0.17"
dotenvy = { version = "0.15", features = ["cli"] }

tokio = { version = "1.0", features = ["full"] }

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

quote = "1"
syn = "2"
proc-macro2 = "1"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
glob = "0.3.1"
chrono = { version = "0.4.38", features = ["serde"] }

