[package]
name = "geekorm-core"
description = "GeekORM core library"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []

uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
rand = ["dep:rand"]
hash = ["dep:pbkdf2", "dep:rand_core"]

# Backends
libsql = ["dep:libsql"]
sqlite = ["dep:sqlite"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["std"] }

uuid = { version = "1.8", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }
# Random number generation
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
# For hashing data
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }

libsql = { version = "0.3", optional = true }
sqlite = { version = "0.36", optional = true }

[dev-dependencies]
geekorm = { path = ".." }
tokio = { version = "1.37.0", features = ["full"] }
