[package]
name = "geekorm-core"
description = "GeekORM Core Library"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []

uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
# Random string / number generation
rand = ["dep:rand"]
# Hashing algorithms
hash = ["hash-pbkdf2"]
hash-all = ["hash-pbkdf2", "hash-argon2", "hash-sha512"]
hash-pbkdf2 = ["dep:pbkdf2", "dep:password-hash", "dep:rand_core"]
hash-argon2 = ["dep:argon2", "dep:password-hash", "dep:rand_core"]
hash-sha512 = ["dep:sha-crypt", "dep:rand_core"]

# Backends
backends = ["search"]
search = []

libsql = ["backends", "dep:libsql"]
rusqlite = ["backends", "dep:rusqlite", "dep:serde_rusqlite"]
# sqlite = ["backends", "dep:sqlite"]

[dependencies]
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = { version = "^0.4", features = ["std"] }

uuid = { version = "^1.9", features = ["v4"], optional = true }
chrono = { version = "^0.4", optional = true, features = ["serde"] }
# Random number generation
rand = { version = "^0.8", optional = true }
rand_core = { version = "^0.6", features = ["std"], optional = true }
# For hashing data
password-hash = { version = "^0.5", optional = true }
pbkdf2 = { version = "^0.12", features = ["simple"], optional = true }
argon2 = { version = "^0.5", optional = true }
sha-crypt = { version = "^0.5", optional = true }

# Backends
libsql = { version = "^0.5", optional = true }
rusqlite = { version = "0.32.0", features = ["bundled"], optional = true }
serde_rusqlite = { version = "^0.36", optional = true }

[dev-dependencies]
geekorm = { path = ".." }
anyhow = "1"
tokio = { version = "^1.40", features = ["full"] }
