[package]
name = "geekorm-core"
description = "GeekORM Core Library"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

utils = ["dep:serde_yaml", "dep:toml", "dep:figment", "dep:anyhow", "dep:log"]

uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
semver = ["dep:semver"]
pagination = []
# TFA (Two Factor Authentication)
tfa = ["two-factor-auth", "two-factor-auth-qr"]
two-factor-auth = ["dep:totp-rs"]
two-factor-auth-qr = ["two-factor-auth", "totp-rs/qr"]
# Random string / number generation
rand = ["dep:rand"]
# Logging
log = ["dep:log"]
# Hashing algorithms
hash = ["hash-pbkdf2"]
hash-all = ["hash-pbkdf2", "hash-argon2", "hash-sha512"]
hash-pbkdf2 = ["dep:pbkdf2", "dep:password-hash", "dep:rand_core"]
hash-argon2 = ["dep:argon2", "dep:password-hash", "dep:rand_core"]
hash-sha512 = ["dep:sha-crypt", "dep:rand_core"]

# Backends
backends = ["search", "dep:url"]
backends-tokio = ["dep:tokio"]
search = []

libsql = ["backends", "dep:libsql", "dep:tokio"]
rusqlite = ["backends", "dep:rusqlite", "dep:serde_rusqlite"]
# sqlite = ["backends", "dep:sqlite"]

migrations = ["dep:syn", "dep:quote", "dep:proc-macro2"]

[dependencies]
thiserror = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = { version = "^0.4", features = ["std"], optional = true }
serde_yaml = { version = "^0.9", optional = true }
toml = { version = "^0.8", optional = true }
figment = { version = "^0.10", optional = true }
anyhow = { version = "^1.0", optional = true }
url = { version = "^2.2", optional = true }

uuid = { version = "^1.9", features = ["v4", "serde"], optional = true }
chrono = { version = "^0.4", optional = true, features = ["serde"] }
semver = { version = "^1.0", optional = true, features = ["serde"] }
# Two Factor Authentication
totp-rs = { version = "^5.5", features = ["serde_support", "gen_secret"], optional = true }
# Random number generation
rand = { version = "^0.8", optional = true }
rand_core = { version = "^0.6", features = ["std"], optional = true }
# For hashing data
password-hash = { version = "^0.5", optional = true }
pbkdf2 = { version = "^0.12", features = ["simple"], optional = true }
argon2 = { version = "^0.5", optional = true }
sha-crypt = { version = "^0.5", optional = true }

# Backends
libsql = { version = "^0.6", optional = true }
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
serde_rusqlite = { version = "^0.37", optional = true }

# Tokenization
quote = { version = "1", optional = true }
syn = { version = "2", optional = true }
proc-macro2 = { version = "1", optional = true }

tokio = { version = "^1.40", features = ["full"], optional = true }
async-trait = "0.1"

[dev-dependencies]
geekorm = { path = ".." }
anyhow = "1"
tokio = { version = "^1.40", features = ["full"] }
