[package]
name = "geekorm-derive"
description = "GeeKorm derive macros library"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

build = "build.rs"

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []

uuid = ["geekorm-core/uuid", "dep:uuid"]
chrono = ["geekorm-core/chrono"]
new = []
primary_key = []
helpers = []

# Backends
libsql = ["geekorm-core/libsql"]

[lib]
proc-macro = true

[dependencies]
geekorm-core = { path = "../geekorm-core" }
thiserror = "1"
# macro magic
proc-macro2 = "1"
quote = "1"
syn = "2"
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# uuid
uuid = { version = "1", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
geekorm = { path = "..", features = ["new", "helpers"] }
