[package]
name = "geekorm-derive"
description = "GeekORM Derive Macros Library"

version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

build = "build.rs"

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []

uuid = ["geekorm-core/uuid", "dep:uuid"]
chrono = ["geekorm-core/chrono"]
new = []
primary_key = []
semver = ["geekorm-core/semver"]
rand = ["geekorm-core/rand", "dep:rand"]
# Hashing algorithms
hash = ["geekorm-core/hash"]
hash-pbkdf2 = ["geekorm-core/hash-pbkdf2"]
hash-argon2 = ["geekorm-core/hash-argon2"]
hash-sha512 = ["geekorm-core/hash-sha512"]

helpers = []


# Backends
backends = ["search"]
search = ["geekorm-core/search"]

libsql = ["backends", "geekorm-core/libsql"]
rusqlite = ["backends", "geekorm-core/rusqlite"]
# sqlite = ["backends", "geekorm-core/sqlite"]

[lib]
proc-macro = true

[dependencies]
geekorm-core = { path = "../geekorm-core", version = "^0.6.7" }

thiserror = "^1.0"
# macro magic
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^2.0"
# serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# uuid
uuid = { version = "^1.9", features = ["v4"], optional = true }
chrono = { version = "^0.4", features = ["serde"] }
rand = { version = "^0.8", optional = true }

[dev-dependencies]
geekorm = { path = "..", features = ["new", "helpers"] }
