[package]
name = "geekorm-sql"
description = "GeekORM SQL Query Builder"

version = "0.1.0"

# version.workspace = true
categories.workspace = true
keywords.workspace = true

documentation.workspace = true
repository.workspace = true

license.workspace = true

edition.workspace = true
rust-version.workspace = true

authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["sqlite"]
all = ["uuid", "chrono", "url", "semver", "sqlite", "postgres"]

uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
url = ["dep:url"]
semver = ["dep:semver"]

# Backends
sqlite = []
postgres = []

[dependencies]
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "^1.23", features = ["v4", "v7", "serde"], optional = true }
chrono = { version = "^0.4", features = ["serde"], optional = true }
url = { version = "^2.5", features = ["serde"], optional = true }
semver = { version = "^1.0", features = ["serde"], optional = true }

