[package]
name = "one-to-many"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
geekorm = { path = "../geekorm", features = ["all", "libsql"] }

