[package]
name = "geekorm-example-rusqlite"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
geekorm = { path = "../../", features = ["all", "rusqlite"] }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

rusqlite = "^0.32"

