[package]
name = "server-rocket"

version.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
geekorm = { path = "../../" }
anyhow = "1"

rocket = { version = "^0.5", features = ["json"] }
libsql = "^0.5"
serde = "1"
tokio = { version = "1", features = ["full"] }
