[package]
name = "server-rocket"

version.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
geekorm = { path = "../../", features = ["all", "libsql", "backends-tokio"] }
anyhow = "1"

rocket = { version = "^0.5", features = ["json"] }
libsql = "^0.6"
serde = "1"
tokio = { version = "1", features = ["full"] }
