[package]
name = "geekorm-example-turso-libsql"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
geekorm = { path = "../../", features = ["libsql"] }
serde = { version = "1", features = ["derive"] }
libsql = "^0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
